--- a/index-.html
+++ b/index-.html
@@ -30,10 +30,10 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Repertoire</a></li>
-                  <li><a href="#">Media</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./repertoire.html">Repertoire</a></li>
+                  <li><a href="./media.html">Media</a></li>
+                  <li><a href="./contact.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
