--- a/indexp.html
+++ b/indexp.html
@@ -30,7 +30,7 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li class="active"><a href="./indexp.html">Home</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="./contact.html">Contact</a></li>
