--- a/repertoire.html
+++ b/repertoire.html
@@ -30,7 +30,7 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="./index-.html">Home</a></li>
+                  <li><a href="./indexp.html">Home</a></li>
                   <li class="active"><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="./contact.html">Contact</a></li>
@@ -39,6 +39,12 @@
             </div>
           </div>
 
+	  <div class="inner cover">
+	    <br/>
+	    <br/>
+	    <br/>
+	  </div>
+
           <div class="inner cover">
             <h1 class="cover-heading">Repertoire.</h1>
 
@@ -46,15 +52,6 @@
 
 	    <h2><a id="2016_0"></a>2016</h2>
 	    <ul>
-	      <li>
-		<p>04/02/2016</p>
-		<ul>
-		  <li>MIT Cambridge Centennial Concert</li>
-		  <li><a href="http://mta.mit.edu/events/mit-cambridge-centennial-concert">http://mta.mit.edu/events/mit-cambridge-centennial-concert</a></li>
-		  <li>Franz Peter Schubert: Der Hirt auf dem Felsen, D. 965</li>
-		  <li>Sp. Divya Pillai, Cl. Michael Choi, Pf. Joonwon Choi</li>
-		</ul>
-	      </li>
 	      <li>
 		<p>05/08/2016</p>
 		<ul>
@@ -88,39 +85,18 @@
 		  <li>Coach: David Deveau</li>
 		</ul>
 	      </li>
+	      <li>
+		<p>04/02/2016</p>
+		<ul>
+		  <li>MIT Cambridge Centennial Concert</li>
+		  <li><a href="http://mta.mit.edu/events/mit-cambridge-centennial-concert">http://mta.mit.edu/events/mit-cambridge-centennial-concert</a></li>
+		  <li>Franz Peter Schubert: Der Hirt auf dem Felsen, D. 965</li>
+		  <li>Sp. Divya Pillai, Cl. Michael Choi, Pf. Joonwon Choi</li>
+		</ul>
+	      </li>
 	    </ul>
 	    <h2><a id="2015_30"></a>2015</h2>
 	    <ul>
-	      <li>
-		<p>05/03/2015</p>
-		<ul>
-		  <li>MIT Emerson Piano Recital</li>
-		  <li>Christoph Willibald von Glück - Alexander Siloti: Melody - Second Ballet from the Opera &lt;Orfeo ed Euridice&gt;</li>
-		  <li>Sergei Rachmaninoff: Prelude in D major, op. 23, nos. 4 and 5</li>
-		  <li>Instructor: Marilyn Roth</li>
-		</ul>
-	      </li>
-	      <li>
-		<p>05/10/2015</p>
-		<ul>
-		  <li>MIT Chamber Music Society Concert</li>
-		  <li>Lester Trimble: Four Fragments from the Canterbury Tales
-		    <ul>
-		      <li>I. Prologe</li>
-		      <li>IV. The Wyf of Biside Bathe</li>
-		    </ul>
-		  </li>
-		  <li>Jenni Brandon: Dog Tales
-		    <ul>
-		      <li>I. We Live to Run</li>
-		      <li>II. Thirteen Ways of Looking at Mona - Part I</li>
-		      <li>III. Dig</li>
-		    </ul>
-		  </li>
-		  <li>Fl. Kyle Swanson, Cl. Kelsey Chan, Sp. Divya Pillai, Pf. Joonwon Choi</li>
-		  <li>Coach: Jean Rife</li>
-		</ul>
-	      </li>
 	      <li>
 		<p>12/06/2015</p>
 		<ul>
@@ -154,40 +130,39 @@
 		  <li>Coach: Jean Rife</li>
 		</ul>
 	      </li>
+	      <li>
+		<p>05/10/2015</p>
+		<ul>
+		  <li>MIT Chamber Music Society Concert</li>
+		  <li>Lester Trimble: Four Fragments from the Canterbury Tales
+		    <ul>
+		      <li>I. Prologe</li>
+		      <li>IV. The Wyf of Biside Bathe</li>
+		    </ul>
+		  </li>
+		  <li>Jenni Brandon: Dog Tales
+		    <ul>
+		      <li>I. We Live to Run</li>
+		      <li>II. Thirteen Ways of Looking at Mona - Part I</li>
+		      <li>III. Dig</li>
+		    </ul>
+		  </li>
+		  <li>Fl. Kyle Swanson, Cl. Kelsey Chan, Sp. Divya Pillai, Pf. Joonwon Choi</li>
+		  <li>Coach: Jean Rife</li>
+		</ul>
+	      </li>
+	      <li>
+		<p>05/03/2015</p>
+		<ul>
+		  <li>MIT Emerson Piano Recital</li>
+		  <li>Christoph Willibald von Glück - Alexander Siloti: Melody - Second Ballet from the Opera &lt;Orfeo ed Euridice&gt;</li>
+		  <li>Sergei Rachmaninoff: Prelude in D major, op. 23, nos. 4 and 5</li>
+		  <li>Instructor: Marilyn Roth</li>
+		</ul>
+	      </li>
 	    </ul>
 	    <h2><a id="2014_69"></a>2014</h2>
 	    <ul>
-	      <li>
-		<p>02/15/2014</p>
-		<ul>
-		  <li>SNUPia: The 3rd Alumni Concert</li>
-		  <li>Johannes Brahms: Piano Quartet No. 1 in G minor, op. 25
-		    <ul>
-		      <li>I. Allegro</li>
-		    </ul>
-		  </li>
-		  <li>Pf. Joonwon Choi, Vn. Hyerhan Cha, Va. Sukjoon Hong, Ce. Yoo-jin Goh</li>
-		</ul>
-	      </li>
-	      <li>
-		<p>07/26/2014</p>
-		<ul>
-		  <li>Joonwon Choi / Joowon Kim / June-gyo Seo Piano Recital</li>
-		  <li>Wolfgang Amadeus Mozart: Fantasie in D minor, KV 397</li>
-		  <li>Robert Schumann: Kinderszenen, op. 15
-		    <ul>
-		      <li>1- Von fremden Ländern und Menschen</li>
-		      <li>2- Kuriose Geschichte</li>
-		      <li>3- Hasche-Mann</li>
-		      <li>4- Bittendes Kind</li>
-		      <li>5- Glückes genug</li>
-		      <li>6- Wichtige Begebenheit</li>
-		      <li>7- Träumerei</li>
-		    </ul>
-		  </li>
-		  <li>Frederic Chopin: Scherzo No. 2 in B-flat minor, op. 31</li>
-		</ul>
-	      </li>
 	      <li>
 		<p>12/07/2014</p>
 		<ul>
@@ -216,6 +191,37 @@
 		  <li>Coach: Jean Rife</li>
 		</ul>
 	      </li>
+	      <li>
+		<p>07/26/2014</p>
+		<ul>
+		  <li>Joonwon Choi / Joowon Kim / June-gyo Seo Piano Recital</li>
+		  <li>Wolfgang Amadeus Mozart: Fantasie in D minor, KV 397</li>
+		  <li>Robert Schumann: Kinderszenen, op. 15
+		    <ul>
+		      <li>1- Von fremden Ländern und Menschen</li>
+		      <li>2- Kuriose Geschichte</li>
+		      <li>3- Hasche-Mann</li>
+		      <li>4- Bittendes Kind</li>
+		      <li>5- Glückes genug</li>
+		      <li>6- Wichtige Begebenheit</li>
+		      <li>7- Träumerei</li>
+		    </ul>
+		  </li>
+		  <li>Frederic Chopin: Scherzo No. 2 in B-flat minor, op. 31</li>
+		</ul>
+	      </li>
+	      <li>
+		<p>02/15/2014</p>
+		<ul>
+		  <li>SNUPia: The 3rd Alumni Concert</li>
+		  <li>Johannes Brahms: Piano Quartet No. 1 in G minor, op. 25
+		    <ul>
+		      <li>I. Allegro</li>
+		    </ul>
+		  </li>
+		  <li>Pf. Joonwon Choi, Vn. Hyerhan Cha, Va. Sukjoon Hong, Ce. Yoo-jin Goh</li>
+		</ul>
+	      </li>
 	    </ul>
 	    <h2><a id="2012_107"></a>2012</h2>
 	    <ul>
@@ -229,6 +235,13 @@
 	    <h2><a id="2011_114"></a>2011</h2>
 	    <ul>
 	      <li>
+		<p>07/02/2011</p>
+		<ul>
+		  <li>SNUPia: The 10th Small Concert</li>
+		  <li>Frederic Chopin: Waltz No. 2 in E major, op. 34, no. 1</li>
+		</ul>
+	      </li>
+	      <li>
 		<p>03/13/2011</p>
 		<ul>
 		  <li>SNUPia: Small Concert</li>
@@ -237,13 +250,6 @@
 		      <li>I. Allegro con spirito</li>
 		    </ul>
 		  </li>
-		</ul>
-	      </li>
-	      <li>
-		<p>07/02/2011</p>
-		<ul>
-		  <li>SNUPia: The 10th Small Concert</li>
-		  <li>Frederic Chopin: Waltz No. 2 in E major, op. 34, no. 1</li>
 		</ul>
 	      </li>
 	    </ul>
@@ -264,20 +270,6 @@
 	    <h2><a id="2009_135"></a>2009</h2>
 	    <ul>
 	      <li>
-		<p>05/23/2009</p>
-		<ul>
-		  <li>SNUPia: The 6th Small Concert</li>
-		  <li>Astor Piazolla - Kyoko Yamamoto: Libertango for Two Pianos</li>
-		</ul>
-	      </li>
-	      <li>
-		<p>08/29/2009</p>
-		<ul>
-		  <li>Schumann and Clara: Summer Regular Concert</li>
-		  <li>Franz Schubert: Fantasia for piano four hands in F minor, D. 940</li>
-		</ul>
-	      </li>
-	      <li>
 		<p>09/16/2009</p>
 		<ul>
 		  <li>SNUPia: The 7th Concert</li>
@@ -288,9 +280,30 @@
 		  </li>
 		</ul>
 	      </li>
+	      <li>
+		<p>08/29/2009</p>
+		<ul>
+		  <li>Schumann and Clara: Summer Regular Concert</li>
+		  <li>Franz Schubert: Fantasia for piano four hands in F minor, D. 940</li>
+		</ul>
+	      </li>
+	      <li>
+		<p>05/23/2009</p>
+		<ul>
+		  <li>SNUPia: The 6th Small Concert</li>
+		  <li>Astor Piazolla - Kyoko Yamamoto: Libertango for Two Pianos</li>
+		</ul>
+	      </li>
 	    </ul>
 	    <h2><a id="2008_151"></a>2008</h2>
 	    <ul>
+	      <li>
+		<p>11/12/2008</p>
+		<ul>
+		  <li>SNUPia/TTP Joint Small Concert</li>
+		  <li>Frederic Chopin: Polonaise in C sharp minor, op. 26, no. 1</li>
+		</ul>
+	      </li>
 	      <li>
 		<p>05/24/2008</p>
 		<ul>
@@ -302,23 +315,9 @@
 		  </li>
 		</ul>
 	      </li>
-	      <li>
-		<p>11/12/2008</p>
-		<ul>
-		  <li>SNUPia/TTP Joint Small Concert</li>
-		  <li>Frederic Chopin: Polonaise in C sharp minor, op. 26, no. 1</li>
-		</ul>
-	      </li>
 	    </ul>
 	    <h2><a id="2007_163"></a>2007</h2>
 	    <ul>
-	      <li>
-		<p>09/28/2006</p>
-		<ul>
-		  <li>SNUPia: The 3rd Concert</li>
-		  <li>Frederic Chopin: Waltz in E minor, Op. posth.</li>
-		</ul>
-	      </li>
 	      <li>
 		<p>12/29/2007</p>
 		<ul>
@@ -330,21 +329,28 @@
 		  </li>
 		</ul>
 	      </li>
+	      <li>
+		<p>09/28/2006</p>
+		<ul>
+		  <li>SNUPia: The 3rd Concert</li>
+		  <li>Frederic Chopin: Waltz in E minor, Op. posth.</li>
+		</ul>
+	      </li>
 	    </ul>
 	    <h2><a id="2006_175"></a>2006</h2>
 	    <ul>
-	      <li>
-		<p>09/21/2006</p>
-		<ul>
-		  <li>SNUPia: The 1st Concert</li>
-		  <li>Frederic Chopin: Ballade No. 3 in A flat major, op. 47</li>
-		</ul>
-	      </li>
 	      <li>
 		<p>12/27/2006</p>
 		<ul>
 		  <li>SNUPia: The 1st Small Concert</li>
 		  <li>Frederic Chopin: Nocturne in G minor, op. 37, no. 1</li>
+		</ul>
+	      </li>
+	      <li>
+		<p>09/21/2006</p>
+		<ul>
+		  <li>SNUPia: The 1st Concert</li>
+		  <li>Frederic Chopin: Ballade No. 3 in A flat major, op. 47</li>
 		</ul>
 	      </li>
 	    </ul>
