--- a/indexp.html
+++ b/indexp.html
@@ -33,15 +33,16 @@
                   <li class="active"><a href="./indexp.html">Home</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
-                  <li><a href="./contact.html">Contact</a></li>
+                  <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Joonwon Choi as an Amateur Pianist.</h1>
+            <p class="p-heading">Joonwon Choi :: An Amateur Pianist.</p>
 	    <img src="./images/cover.jpg" width="450"/>
+	    <p>This is a text</p>
           </div>
 
         </div>
