--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Joonwon Choi">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Joonwon Choi as an Amateur Pianist</title>
+    <title>Joonwon Choi :: Amateur Pianist</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
                   <li><a href="./indexp.html">Home</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li class="active"><a href="./media.html">Media</a></li>
-                  <li><a href="./contact.html">Contact</a></li>
+                  <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -46,9 +46,16 @@
 	  </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Media.</h1>
+            <p class="p-heading">Media.</p>
 
 	    <!-- Converted from the markdown document -->
+
+	    <p>You can watch (listen) more on following links:
+	      <ul>
+		<li><a href="https://www.youtube.com/user/TheOpus37" target="_blank">Youtube</a></li>
+		<li><a href="https://soundcloud.com/joonwon-choi-1" target="_blank">SoundCloud</a></li>
+	      </ul>
+	    </p>
 
 	    <h2><a id="2016_0"></a>2016</h2>
 	    <ul>
@@ -89,171 +96,6 @@
 		</ul>
 		<p>
 		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/228824716&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		</p>
-	      </li>
-	    </ul>
-	    <h2><a id="2015_30"></a>2015</h2>
-	    <ul>
-	      <li>
-		<p>12/06/2015</p>
-		<ul>
-		  <li>MIT Chamber Music Society Concert</li>
-		  <li>Louis Spohr: 6 Deutsche Lieder, op. 103
-		    <ul>
-		      <li>6- Wach Auf (“Wake up”)</li>
-		    </ul>
-		  </li>
-		  <li>Dominick Argento: To Be Sung Upon the Water
-		    <ul>
-		      <li>2- The Lake at Evening</li>
-		      <li>7- The Lake at Night</li>
-		    </ul>
-		  </li>
-		  <li>Franz Peter Schubert: Der Hirt auf dem Felsen, D. 965</li>
-		  <li>Sp. Divya Pillai, Cl. Michael Choi, Pf. Joonwon Choi</li>
-		  <li>Coach: Jean Rife</li>
-		</ul>
-		<p>
-		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/176241117&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		</p>
-	      </li>
-	      <li>
-		<p>05/10/2015</p>
-		<ul>
-		  <li>MIT Chamber Music Society Concert</li>
-		  <li>Lester Trimble: Four Fragments from the Canterbury Tales
-		    <ul>
-		      <li>I. Prologe</li>
-		      <li>IV. The Wyf of Biside Bathe</li>
-		    </ul>
-		  </li>
-		  <li>Jenni Brandon: Dog Tales
-		    <ul>
-		      <li>I. We Live to Run</li>
-		      <li>II. Thirteen Ways of Looking at Mona - Part I</li>
-		      <li>III. Dig</li>
-		    </ul>
-		  </li>
-		  <li>Fl. Kyle Swanson, Cl. Kelsey Chan, Sp. Divya Pillai, Pf. Joonwon Choi</li>
-		  <li>Coach: Jean Rife</li>
-		</ul>
-		<p>
-		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/136043835&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		</p>
-	      </li>
-	    </ul>
-	    <h2><a id="2014_69"></a>2014</h2>
-	    <ul>
-	      <li>
-		<p>12/07/2014</p>
-		<ul>
-		  <li>MIT Emerson Piano Recital</li>
-		  <li>Johann Sebastian Bach: Italian Concerto, BWV 971
-		    <ul>
-		      <li>Movement No. 1</li>
-		    </ul>
-		  </li>
-		  <li>Frederic Chopin: Nocturne in F Major, op. 15, no. 1</li>
-		  <li>Instructor: Marilyn Roth</li>
-		</ul>
-		<p>
-		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/70665351&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		</p>
-	      </li>
-	      <li>
-		<p>12/07/2014</p>
-		<ul>
-		  <li>MIT Chamber Music Society Concert</li>
-		  <li>Joseph Haydn: Trio in D Major, Hob. XV:16
-		    <ul>
-		      <li>I. Allegro</li>
-		      <li>II. Andantino piu tosto Allegretto</li>
-		      <li>III. Vivace assai</li>
-		    </ul>
-		  </li>
-		  <li>Fl. Sarah Van Dierdonck, Vc. Alex Wang, Pf. Joonwon Choi</li>
-		  <li>Coach: Jean Rife</li>
-		</ul>
-		<p>
-		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/70664621&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		</p>
-	      </li>
-	      <li>
-		<p>07/26/2014</p>
-		<ul>
-		  <li>Joonwon Choi / Joowon Kim / June-gyo Seo Piano Recital</li>
-		  <li>
-		    <p>Wolfgang Amadeus Mozart: Fantasie in D minor, KV 397</p>
-		    <p>
-		      <iframe width="560" height="315" src="https://www.youtube.com/embed/dfZnxSiPSoE" frameborder="0" allowfullscreen></iframe>
-		    </p>
-		  </li>
-		  <li>
-		    <p>Robert Schumann: Kinderszenen, op. 15</p>
-		    <ul>
-		      <li>1- Von fremden Ländern und Menschen</li>
-		      <li>2- Kuriose Geschichte</li>
-		      <li>3- Hasche-Mann</li>
-		      <li>4- Bittendes Kind</li>
-		      <li>5- Glückes genug</li>
-		      <li>6- Wichtige Begebenheit</li>
-		      <li>7- Träumerei</li>
-		    </ul>
-		    <p>
-		      <iframe width="560" height="315" src="https://www.youtube.com/embed/60DGjx_UtJA" frameborder="0" allowfullscreen></iframe>
-		    </p>
-		  </li>
-		  <li>
-		    <p>Frederic Chopin: Scherzo No. 2 in B-flat minor, op. 31</p>
-		    <p>
-		      <iframe width="560" height="315" src="https://www.youtube.com/embed/IZLfZ3GG5T4" frameborder="0" allowfullscreen></iframe>
-		    </p>
-		  </li>
-		</ul>
-	      </li>
-	      <li>
-		<p>02/15/2014</p>
-		<ul>
-		  <li>SNUPia: The 3rd Alumni Concert</li>
-		  <li>Johannes Brahms: Piano Quartet No. 1 in G minor, op. 25
-		    <ul>
-		      <li>I. Allegro</li>
-		    </ul>
-		  </li>
-		  <li>Pf. Joonwon Choi, Vn. Hyerhan Cha, Va. Sukjoon Hong, Ce. Yoo-jin Goh</li>
-		</ul>
-		<p>
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/cvDLetPIa6E" frameborder="0" allowfullscreen></iframe>
-		</p>
-	      </li>
-	    </ul>
-	    <h2><a id="2012_107"></a>2012</h2>
-	    <ul>
-	      <li>
-		<p>02/18/2012</p>
-		<ul>
-		  <li>SNUPia: The 1st Alumni Concert</li>
-		  <li>Frederic Chopin: Waltz No. 5 in A-flat major, op. 42</li>
-		</ul>
-		<p>
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/MpvRsnRbQtI" frameborder="0" allowfullscreen></iframe>
-		</p>
-	      </li>
-	    </ul>
-	    <h2><a id="2009_135"></a>2009</h2>
-	    <ul>
-	      <li>
-		<p>09/16/2009</p>
-		<ul>
-		  <li>SNUPia: The 7th Concert</li>
-		  <li>Richard Strauss: Piano Sonata in B minor, op. 5
-		    <ul>
-		      <li>IV. Finale. Allegretto Vivo</li>
-		    </ul>
-		  </li>
-		</ul>
-		<p>
-		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230579814&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 		</p>
 	      </li>
 	    </ul>
