--- a/repertoire.html
+++ b/repertoire.html
@@ -33,7 +33,7 @@
                   <li><a href="./indexp.html">Home</a></li>
                   <li class="active"><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
-                  <li><a href="./contact.html">Contact</a></li>
+                  <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -46,7 +46,7 @@
 	  </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Repertoire.</h1>
+            <p class="p-heading">Repertoire.</p>
 
 	    <!-- Converted from the markdown document -->
 
@@ -89,7 +89,7 @@
 		<p>04/02/2016</p>
 		<ul>
 		  <li>MIT Cambridge Centennial Concert</li>
-		  <li><a href="http://mta.mit.edu/events/mit-cambridge-centennial-concert">http://mta.mit.edu/events/mit-cambridge-centennial-concert</a></li>
+		  <li><a href="http://mta.mit.edu/events/mit-cambridge-centennial-concert" target="_blank">http://mta.mit.edu/events/mit-cambridge-centennial-concert</a></li>
 		  <li>Franz Peter Schubert: Der Hirt auf dem Felsen, D. 965</li>
 		  <li>Sp. Divya Pillai, Cl. Michael Choi, Pf. Joonwon Choi</li>
 		</ul>
