Updated the index page

--- a/index.html
+++ b/index.html
@@ -19,22 +19,15 @@
   <body>
 
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
-
           <div class="inner cover">
-            <h1 class="cover-heading">Joonwon Choi as</h1>
-	    
-	    <h2>an Amateur Pianist</h2>
-	    <h2>a PhD Candidate of MIT</h2>
+            <p class="p-heading">Joonwon Choi as</p>
+	    <p class="p-subheading"><a href="./indexp.html">an Amateur Pianist</a></p>
+	    <p class="p-subheading">a PhD Candidate of MIT</p>
           </div>
-
         </div>
-
       </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript
