--- a/indexp.html
+++ b/indexp.html
@@ -42,7 +42,14 @@
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi :: An Amateur Pianist.</p>
 	    <img src="./images/cover.jpg" width="450"/>
-	    <p>This is a text</p>
+	    <p>Besides academic careers, Joonwon also pursues his
+	      musical careers as an amateur pianist. He has studied
+	      piano performance for two years as
+	      an <a href="http://mta.mit.edu/music/performance/emerson-program"
+	      target="_blank">MIT Emerson scholar</a>, with the
+	      instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
+	      target="_blank">Marilyn Roth</a> in New England
+	      Conservatory.</p>
           </div>
 
         </div>
