Made subdirectories for both homepages

--- a/p/index.html
+++ b/p/index.html
@@ -7,15 +7,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Joonwon Choi as an Amateur Pianist">
     <meta name="author" content="Joonwon Choi">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>Joonwon Choi as an Amateur Pianist</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="../cover.css" rel="stylesheet">
   </head>
 
   <body>
@@ -41,7 +40,7 @@
 
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi :: An Amateur Pianist.</p>
-	    <img src="./images/cover.jpg" width="450"/>
+	    <img src="../images/cover.jpg" width="450"/>
 	    <p>Besides academic careers, Joonwon also pursues his
 	      musical careers as an amateur pianist. He has studied
 	      piano performance for two years as
@@ -62,9 +61,5 @@
 	 ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-      <script src="../../dist/js/bootstrap.min.js"></script>
-      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-      <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
