--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="cover-container">
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi as</p>
-	    <p class="p-subheading"><a href="./indexp.html">an Amateur Pianist</a></p>
-	    <p class="p-subheading">a PhD Candidate of MIT</p>
+	    <p class="p-subheading"><a href="./p/index.html">an Amateur Pianist</a></p>
+	    <p class="p-subheading"><a href="./c/index.html">a PhD Candidate of MIT</a></p>
           </div>
         </div>
       </div>
