Homepage for academia

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Joonwon Choi</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
@@ -23,8 +23,8 @@
         <div class="cover-container">
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi as</p>
+	    <p class="p-subheading"><a href="./c/index.html">a Graduate Student at MIT</a></p>
 	    <p class="p-subheading"><a href="./p/index.html">an Amateur Pianist</a></p>
-	    <p class="p-subheading"><a href="./c/index.html">a PhD Candidate of MIT</a></p>
           </div>
         </div>
       </div>
