--- a/p/index.html
+++ b/p/index.html
@@ -11,7 +11,7 @@
     <title>Joonwon Choi as an Amateur Pianist</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
@@ -29,7 +29,7 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="./indexp.html">Home</a></li>
+                  <li class="active"><a href="./index.html">Home</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
@@ -40,14 +40,17 @@
 
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi :: An Amateur Pianist.</p>
-	    <img src="../images/cover.jpg" width="450"/>
+	    <br />
+	    <img src="../images/profilep.jpg" width="450"/>
+	    <br />
+	    <br />
 	    <p>Besides academic careers, Joonwon also pursues his
 	      musical careers as an amateur pianist. He has studied
 	      piano performance for two years as
 	      an <a href="http://mta.mit.edu/music/performance/emerson-program"
-	      target="_blank">MIT Emerson scholar</a>, with the
+		    target="_blank">MIT Emerson scholar</a>, with the
 	      instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
-	      target="_blank">Marilyn Roth</a> in New England
+			    target="_blank">Marilyn Roth</a> in New England
 	      Conservatory.</p>
           </div>
 
