--- a/p/repertoire.html
+++ b/p/repertoire.html
@@ -11,7 +11,7 @@
     <title>Joonwon Choi as an Amateur Pianist</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
@@ -29,7 +29,7 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="./indexp.html">Home</a></li>
+                  <li><a href="./index.html">Home</a></li>
                   <li class="active"><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
