--- a/c/index.html
+++ b/c/index.html
@@ -59,8 +59,8 @@
 		  target="_blank">Arvind</a>. I'm interested in formal
 		  verification for any computer systems that are hard
 		  to believe to be correct. I'm an advocate of
-		  mechanized proofs; I like to prove something
-		  in <a href="http://coq.inria.fr"
+		  mechanized proofs, I like to prove something
+		  with <a href="http://coq.inria.fr"
 		  target="_blank">Coq</a>. I don't believe things not
 		  proven.
 		</p>
