--- a/p/index.html
+++ b/p/index.html
@@ -39,7 +39,7 @@
           </div>
 
           <div class="inner cover">
-            <p class="p-heading">Joonwon Choi :: An Amateur Pianist.</p>
+            <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
 	    <br />
 	    <img src="../images/profilep.jpg" width="450"/>
 	    <br />
