Valid xhtml/css marks

--- a/c/index.html
+++ b/c/index.html
@@ -148,15 +148,21 @@
 	    </div>
 
           </div>
+
+          <div class="inner cover">
+	    <p>
+	      <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11-blue" alt="Valid XHTML 1.1"/></a>
+	      <a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a>
+	    </p>
+	  </div>
+
         </div>
-
       </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript
 	 ================================================== -->
-	 <!-- Placed at the end of the document so the pages load
+    <!-- Placed at the end of the document so the pages load
 	 faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
