--- a/c/index.html
+++ b/c/index.html
@@ -49,7 +49,7 @@
 	    <div id="home">
               <p class="p-heading">Joonwon Choi.</p>
 	      <div class="col-xs-4">
-		<img src="../images/profilec.jpg" width="200"/>
+		<img src="../images/profilec.jpg" width="200" alt="Profile"/>
 	      </div>
 	      <div class="col-xs-8">
 		<p>I'm a graduate student at MIT CSAIL, currently
@@ -114,7 +114,7 @@
 		  University</a><br/>(Double major in Mathematics)
 		</li>
 		<li>Feb 2006, graduated from Incheon Science High
-		School</a>
+		School
 		</li>
 	      </ul>
 	    </div>
@@ -148,18 +148,18 @@
 	    </div>
 
           </div>
-
+	  
           <div class="inner cover">
 	    <p>
 	      <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11-blue" alt="Valid XHTML 1.1"/></a>
 	      <a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a>
 	    </p>
 	  </div>
-
+	  
         </div>
       </div>
     </div>
-
+    
     <!-- Bootstrap core JavaScript
 	 ================================================== -->
     <!-- Placed at the end of the document so the pages load
