--- a/c/index.html
+++ b/c/index.html
@@ -79,22 +79,21 @@
 
 	    <div id="interests">
 	      <p class="p-subheading">Research Interests</p>
-	      <p>My current research interests are as follows:
-		<ul>
-		  <li>Formal verification for correct hardware design
-		    and synthesis, based on modular proof. Take a look
-		    at the
-		    <a href="http://plv.csail.mit.edu/kami"
-		       target="_blank">Kami</a> project homepage for
-		    details</li>
-		  <li>A language for coherent systems, for easy design
-		    and automated proof.</li>
-		  <li>Formal specification
-		    of <a href="http://riscv.org"
-		    target="_blank">RISC-V</a> and verification of
-		    processors.</li>
-		</ul>
-	      </p>
+	      <p>My current research interests are as follows:</p>
+	      <ul>
+		<li>Formal verification for correct hardware design
+		  and synthesis, based on modular proof. Take a look
+		  at the
+		  <a href="http://plv.csail.mit.edu/kami"
+		     target="_blank">Kami</a> project homepage for
+		  details</li>
+		<li>A language for coherent systems, for easy design
+		  and automated proof.</li>
+		<li>Formal specification
+		  of <a href="http://riscv.org"
+			target="_blank">RISC-V</a> and verification of
+		  processors.</li>
+	      </ul>
 	    </div>
 
 	    <div id="education">
