--- a/c/index.html
+++ b/c/index.html
@@ -148,9 +148,8 @@
           </div>
 	  
           <div class="inner cover">
-	    <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11-blue" alt="Valid XHTML 1.1"/></a>
-	      <a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a>
-	    </p>
+	    <a href="http://validator.w3.org/check?uri=referer">
+	      <img src="http://www.w3.org/Icons/valid-xhtml11-blue" alt="Valid XHTML 1.1"/></a>
 	  </div>
 	  
         </div>
