--- a/c/index.html
+++ b/c/index.html
@@ -83,15 +83,13 @@
 	      <ul>
 		<li>Formal verification for correct hardware design
 		  and synthesis, based on modular proof. Take a look
-		  at the
-		  <a href="http://plv.csail.mit.edu/kami"
-		     target="_blank">Kami</a> project homepage for
+		  at the <a href="http://plv.csail.mit.edu/kami"
+		  target="_blank">Kami</a> project page for
 		  details</li>
 		<li>A language for coherent systems, for easy design
 		  and automated proof.</li>
-		<li>Formal specification
-		  of <a href="http://riscv.org"
-			target="_blank">RISC-V</a> and verification of
+		<li>Formal specification of <a href="http://riscv.org"
+		  target="_blank">RISC-V</a> and verification of
 		  processors.</li>
 	      </ul>
 	    </div>
