Grid issue resolved

--- a/c/index.html
+++ b/c/index.html
@@ -48,10 +48,10 @@
           <div class="inner cover">
 	    <div id="home">
               <p class="p-heading">Joonwon Choi.</p>
-	      <div class="col-xs-4">
+	      <div class="col-xs-12 col-sm-4 col-md-4">
 		<img src="../images/profilec.jpg" width="200" alt="Profile"/>
 	      </div>
-	      <div class="col-xs-8">
+	      <div class="col-xs-12 col-sm-8 col-md-8">
 		<p>I'm a graduate student at MIT CSAIL, currently
 		  co-advised by <a href="http://adam.chlipala.net"
 		  target="_blank">Adam Chlipala</a>
@@ -77,7 +77,7 @@
 	      </div>
 	    </div>
 
-	    <div id="interests">
+	    <div id="interests" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Research Interests</p>
 	      <p>My current research interests are as follows:</p>
 	      <ul>
@@ -94,7 +94,7 @@
 	      </ul>
 	    </div>
 
-	    <div id="education">
+	    <div id="education" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Education</p>
 	      <ul>
 		<li>Jun 2016, M.S., <a href="http://eecs.mit.edu"
@@ -115,7 +115,7 @@
 	      </ul>
 	    </div>
 
-	    <div id="awards">
+	    <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Awards and Honors</p>
 	       <ul>
 		 <li>Sep 2014 - Current, Kwanjeong Educational
@@ -129,7 +129,7 @@
 	       </ul>
 	    </div>
 
-	    <div id="experience">
+	    <div id="experience" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Work Experience</p>
 	      <ul>
 		<li>Mar 2013 - Apr 2013, Visiting Researcher,
@@ -144,12 +144,6 @@
 	    </div>
 
           </div>
-	  
-          <div class="inner cover">
-	    <a href="http://validator.w3.org/check?uri=referer">
-	      <img src="http://www.w3.org/Icons/valid-xhtml11-blue" alt="Valid XHTML 1.1"/></a>
-	  </div>
-	  
         </div>
       </div>
     </div>
