--- a/p/index.html
+++ b/p/index.html
@@ -39,19 +39,25 @@
           </div>
 
           <div class="inner cover">
-            <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
-	    <br />
-	    <img src="../images/profilep.jpg" width="450"/>
-	    <br />
-	    <br />
-	    <p>Besides academic careers, Joonwon also pursues his
-	      musical careers as an amateur pianist. He has studied
-	      piano performance for two years as
-	      an <a href="http://mta.mit.edu/music/performance/emerson-program"
-		    target="_blank">MIT Emerson scholar</a>, with the
-	      instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
-			    target="_blank">Marilyn Roth</a> in New England
-	      Conservatory.</p>
+	    <div class="col-xs-12 col-sm-12 col-md-12">
+              <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
+	      <br />
+	    </div>
+	    <div class="col-xs-12 col-sm-12 col-md-12">
+	      <img src="../images/profilep.jpg" width="80%" />
+	      <br />
+	      <br />
+	    </div>
+	    <div class="col-xs-12 col-sm-12 col-md-12">
+	      <p>Besides academic careers, Joonwon also pursues his
+		musical careers as an amateur pianist. He has studied
+		piano performance for two years as
+		an <a href="http://mta.mit.edu/music/performance/emerson-program"
+		      target="_blank">MIT Emerson scholar</a>, with the
+		instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
+			      target="_blank">Marilyn Roth</a> in New England
+		Conservatory.</p>
+	    </div>
           </div>
 
         </div>
