--- a/p/media.html
+++ b/p/media.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
   </head>
 
   <body>
