--- a/c/index.html
+++ b/c/index.html
@@ -145,7 +145,17 @@
 	    </div>
 
           </div>
-        </div>
+
+          <div class="inner cover">
+	    <a title="shopify visitor statistics"
+	       href="http://statcounter.com/shopify/"
+	       target="_blank">
+	      <img src="http://c.statcounter.com/11069616/0/6af2b505/0/"
+		   alt="shopify visitor statistics"
+		   style="border:none;" />
+	    </a>
+	  </div>
+	</div>
       </div>
     </div>
     
