Counter added for p-page also

--- a/p/index.html
+++ b/p/index.html
@@ -61,6 +61,29 @@
 	    </div>
           </div>
 
+	  <div class="inner cover">
+	    <script type="text/javascript">
+	      var sc_project="11069616"; 
+	      var sc_invisible="0"; 
+	      var sc_security="6af2b505"; 
+	      var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+	      document.write("<sc"+"ript type='text/javascript' src='"
+				  + scJsHost
+				  + "statcounter.com/counter/counter.js'></sc"+"ript>");
+	    </script>
+	    <noscript>
+	      <div class="statcounter">
+		<a title="shopify traffic stats"
+		   href="http://statcounter.com/shopify/"
+		   target="_blank">
+		  <img class="statcounter"
+		       src="//c.statcounter.com/11069616/0/6af2b505/0/"
+		       alt="shopify traffic stats">
+		</a>
+	      </div>
+	    </noscript>
+	  </div>
+
         </div>
 
       </div>
