Added a publication section

--- a/c/index.html
+++ b/c/index.html
@@ -116,6 +116,16 @@
 	      </ul>
 	    </div>
 
+	    <div id="education" class="col-xs-12 col-sm-12 col-md-12">
+	      <p class="p-subheading">Publication</p>
+	      <ul>
+		<li>An Inlining Approach to Formal Hardware Semantics,
+		M.S. Thesis in Electrical Engineering and Computer
+		Science, Massachusetts Institute of
+		Technology. [<a href="./docs/msthesis.pdf">pdf</a>]</li>
+	      </ul>
+	    </div>
+	    
 	    <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Awards and Honors</p>
 	       <ul>
