--- a/c/index.html
+++ b/c/index.html
@@ -66,15 +66,16 @@
 		  proven.
 		</p>
 		<hr />
+		<p><span class="emph">CV</span> : [<a href="./docs/cv.pdf">pdf</a>]
 		<p><span class="emph">Office</span> : Stata Center, 77
 		  Massachusetts
 		  Ave, <a href="http://www.csail.mit.edu/resources/maps/8G/G804.gif"
 		  target="_blank">32-G804</a>, Cambridge, MA 02139
 		</p>
 		<p><span class="emph">Email</span>
-		  : <a href="mailto:joonwonc@mit.edu">joonwonc@mit.edu</a></p>
-		<p><span class="emph">Phone</span> :
-		+1-339-225-5940</p>
+		  : <a href="mailto:joonwonc@mit.edu">joonwonc@mit.edu</a>
+		  | <span class="emph">Phone</span> :
+		  +1-339-225-594</p>
 	      </div>
 	    </div>
 
