--- a/c/index.html
+++ b/c/index.html
@@ -117,7 +117,7 @@
 	      </ul>
 	    </div>
 
-	    <div id="education" class="col-xs-12 col-sm-12 col-md-12">
+	    <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Publication</p>
 	      <ul>
 		<li>An Inlining Approach to Formal Hardware Semantics,
