Repertoire for Fall 2016 updated

--- a/p/repertoire.html
+++ b/p/repertoire.html
@@ -53,10 +53,35 @@
 	    <h2><a id="2016_0"></a>2016</h2>
 	    <ul>
 	      <li>
+		<p>12/11/2016</p>
+		<ul>
+		  <li>MIT Emerson Scholar Recital</li>
+		  <li>Johannes Brahms: Piano Concerto No. 1 in D minor, op. 15
+		    <ul>
+		      <li>III. Rondo: Allegro non troppo</li>
+		    </ul>
+		  </li>
+		  <li>Pf. Joonwon Choi, Pf. Eileen Huang (acc.)</li>
+		  <li>Instructor: Marilyn Roth</li>
+		</ul>
+	      </li>
+	      <li>
+		<p>12/03/2016</p>
+		<ul>
+		  <li>MIT Emerson Scholar Recital</li>
+		  <li>Edward Elgar: Cello Concerto in E minor, op. 85
+		    <ul>
+		      <li>I. Adagio - Moderato</li>
+		    </ul>
+		  </li>
+		  <li>Vc. Hoon Cho, Pf. Joonwon Choi (acc.)</li>
+		</ul>
+	      </li>
+	      <li>
 		<p>05/08/2016</p>
 		<ul>
 		  <li>MIT Emerson Scholar Recital</li>
-		  <li>Beethoven: Piano Sonata No. 30 in E major, op. 109
+		  <li>Ludwig van Beethoven: Piano Sonata No. 30 in E major, op. 109
 		    <ul>
 		      <li>I. Vivace ma non troppo - Adagio espressivo</li>
 		      <li>II. Prestissimo</li>
