Updated the academic homepage

--- a/c/index.html
+++ b/c/index.html
@@ -34,7 +34,7 @@
                   <li><a href="./index.html#interests">Interests</a></li>
                   <li><a href="./index.html#education">Education</a></li>
                   <li><a href="./index.html#awards">Awards</a></li>
-                  <li><a href="./index.html#experience">Experience</a></li>
+                  <li><a href="./index.html#texperience">Experience</a></li>
                 </ul>
               </nav>
             </div>
@@ -88,11 +88,9 @@
 		  at the <a href="http://plv.csail.mit.edu/kami"
 		  target="_blank">Kami</a> project page for
 		  details</li>
-		<li>A language for coherent systems, for easy design
-		  and automated proof.</li>
+		<li>Formal proofs of realistic processors.</li>
 		<li>Formal specification of <a href="http://riscv.org"
-		  target="_blank">RISC-V</a> and verification of
-		  processors.</li>
+		  target="_blank">RISC-V</a></li>
 	      </ul>
 	    </div>
 
@@ -126,7 +124,7 @@
 		Technology. [<a href="./docs/msthesis.pdf">pdf</a>]</li>
 	      </ul>
 	    </div>
-	    
+
 	    <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Awards and Honors</p>
 	       <ul>
@@ -141,7 +139,19 @@
 	       </ul>
 	    </div>
 
-	    <div id="experience" class="col-xs-12 col-sm-12 col-md-12">
+	    <div id="texperience" class="col-xs-12 col-sm-12 col-md-12">
+	      <p class="p-subheading">Teaching Experience</p>
+	      <ul>
+		<li>Spring 2017, Teaching Assistant, MIT
+		6.887: <a href="http://adam.chlipala.net/frap/">Formal
+		Reasoning About Programs</a></li>
+		<li>Fall 2013, Teaching Assistant, SNU
+		4190.310: <a href="http://ropas.snu.ac.kr/~kwang/4190.310/13/">Programming
+		Languages</a></li>
+	      </ul>
+	    </div>
+
+	    <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Work Experience</p>
 	      <ul>
 		<li>Mar 2013 - Apr 2013, Visiting Researcher,
