Applied the icfp paper

--- a/c/index.html
+++ b/c/index.html
@@ -16,6 +16,14 @@
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
+    <style type="text/css">
+      .author
+      { text-decoration:underline; }
+      .conference
+      { font-style:italic; }
+      .paper
+      { font-weight:bold; }
+    </style>
   </head>
 
   <body>
@@ -118,10 +126,26 @@
 	    <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
 	      <p class="p-subheading">Publication</p>
 	      <ul>
-		<li>An Inlining Approach to Formal Hardware Semantics,
-		M.S. Thesis in Electrical Engineering and Computer
-		Science, Massachusetts Institute of
-		Technology. [<a href="./docs/msthesis.pdf">pdf</a>]</li>
+		<li><span class="paper">Kami: A Platform for
+		    High-Level Parametric Hardware Specification and
+		    its Modular Verification.</span> [to appear]<br />
+		  <span class="author">Joonwon Choi</span>,
+		    Muralidaran Vijayaraghavan, Benjamin Sherman, Adam
+		    Chlipala, and Arvind.<br />
+		  <span class="conference">Proceedings of the 22nd ACM
+		    SIGPLAN International Conference on Functional
+		    Programming (ICFP'17). September
+		    2017.</span>
+		</li>
+	      </ul>
+	      <ul>
+		<li><span class="paper">An Inlining Approach to Formal
+		    Hardware Semantics.</span>
+		    [<a href="./docs/msthesis.pdf">pdf</a>]<br />
+		  <span class="conference">M.S. Thesis in Electrical
+		    Engineering and Computer Science, Massachusetts
+		    Institute of Technology.</span><br />
+		</li>
 	      </ul>
 	    </div>
 
