Added a coach for the 2017 CMS program

--- a/p/repertoire.html
+++ b/p/repertoire.html
@@ -59,6 +59,7 @@
 		  <li>Dmitri Shostakovich: Concertino for Two Pianos, op. 94</li>
 		  <li>Witold Lutoslawski: Variations on a Theme of Paganini</li>
 		  <li>Pf1. Hane Lee, Pf2. Joonwon Choi</li>
+		  <li>Coach: David Deveau</li>
 		</ul>
 	      </li>
 	      <li>
