--- a/p/index.html
+++ b/p/index.html
@@ -52,7 +52,7 @@
 	    <div class="col-xs-12 col-sm-12 col-md-12">
 	      <p>Besides academic careers, Joonwon also pursues his
 		musical careers as an amateur pianist. He has studied
-		piano performance for two years as
+		piano performance for three years as
 		an <a href="http://mta.mit.edu/music/performance/emerson-program"
 		      target="_blank">MIT Emerson scholar</a>, with the
 		instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
