--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
   </head>
 
   <body>
