--- a/p/index.html
+++ b/p/index.html
@@ -1,98 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Joonwon Choi as an Amateur Pianist">
-    <meta name="author" content="Joonwon Choi">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="Joonwon Choi as an Amateur Pianist">
+        <meta name="author" content="Joonwon Choi">
 
-    <title>Joonwon Choi as an Amateur Pianist</title>
+        <title>Joonwon Choi as an Amateur Pianist</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
-  </head>
+        <!-- Custom styles for this template -->
+        <link href="../cover.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
+    </head>
 
-  <body>
+    <body>
 
-    <div class="site-wrapper">
+        <div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
+            <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+                <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="./index.html">Home</a></li>
-                  <li><a href="./repertoire.html">Repertoire</a></li>
-                  <li><a href="./media.html">Media</a></li>
-                  <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
-                </ul>
-              </nav>
+                    <div class="masthead clearfix">
+                        <div class="inner">
+                            <nav>
+                                <ul class="nav masthead-nav">
+                                    <li class="active"><a href="./index.html">Home</a></li>
+                                    <li><a href="./repertoire.html">Repertoire</a></li>
+                                    <li><a href="./media.html">Media</a></li>
+                                    <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+
+                    <div class="inner cover">
+	                      <div class="col-xs-12 col-sm-12 col-md-12">
+                            <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
+	                          <br />
+	                      </div>
+	                      <div class="col-xs-12 col-sm-12 col-md-12">
+	                          <img src="../images/profilep.jpg" width="80%" />
+	                          <br />
+	                          <br />
+	                      </div>
+	                      <div class="col-xs-12 col-sm-12 col-md-12">
+	                          <p>Besides academic careers, Joonwon also pursues his
+		                            musical careers as an amateur pianist. He has studied
+		                            piano performance for three years as
+		                            an <a href="http://mta.mit.edu/music/performance/emerson-program"
+		                                  target="_blank">MIT Emerson scholar</a>, with the
+		                            instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
+			                                        target="_blank">Marilyn Roth</a> in New England
+		                            Conservatory.</p>
+	                      </div>
+                    </div>
+
+	                  <div class="inner cover">
+	                      <script type="text/javascript">
+	                       var sc_project="11069616"; 
+	                       var sc_invisible="0"; 
+	                       var sc_security="6af2b505"; 
+	                       var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+	                       document.write("<sc"+"ript type='text/javascript' src='"
+				                              + scJsHost
+				                              + "statcounter.com/counter/counter.js'></sc"+"ript>");
+	                      </script>
+	                      <noscript>
+	                          <div class="statcounter">
+		                            <a title="shopify traffic stats"
+		                               href="http://statcounter.com/shopify/"
+		                               target="_blank">
+		                                <img class="statcounter"
+		                                     src="//c.statcounter.com/11069616/0/6af2b505/0/"
+		                                     alt="shopify traffic stats">
+		                            </a>
+	                          </div>
+	                      </noscript>
+	                  </div>
+
+                </div>
+
             </div>
-          </div>
-
-          <div class="inner cover">
-	    <div class="col-xs-12 col-sm-12 col-md-12">
-              <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
-	      <br />
-	    </div>
-	    <div class="col-xs-12 col-sm-12 col-md-12">
-	      <img src="../images/profilep.jpg" width="80%" />
-	      <br />
-	      <br />
-	    </div>
-	    <div class="col-xs-12 col-sm-12 col-md-12">
-	      <p>Besides academic careers, Joonwon also pursues his
-		musical careers as an amateur pianist. He has studied
-		piano performance for three years as
-		an <a href="http://mta.mit.edu/music/performance/emerson-program"
-		      target="_blank">MIT Emerson scholar</a>, with the
-		instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
-			      target="_blank">Marilyn Roth</a> in New England
-		Conservatory.</p>
-	    </div>
-          </div>
-
-	  <div class="inner cover">
-	    <script type="text/javascript">
-	      var sc_project="11069616"; 
-	      var sc_invisible="0"; 
-	      var sc_security="6af2b505"; 
-	      var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
-	      document.write("<sc"+"ript type='text/javascript' src='"
-				  + scJsHost
-				  + "statcounter.com/counter/counter.js'></sc"+"ript>");
-	    </script>
-	    <noscript>
-	      <div class="statcounter">
-		<a title="shopify traffic stats"
-		   href="http://statcounter.com/shopify/"
-		   target="_blank">
-		  <img class="statcounter"
-		       src="//c.statcounter.com/11069616/0/6af2b505/0/"
-		       alt="shopify traffic stats">
-		</a>
-	      </div>
-	    </noscript>
-	  </div>
 
         </div>
 
-      </div>
-
-    </div>
-
-    <!-- Bootstrap core JavaScript
-	 ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+        <!-- Bootstrap core JavaScript
+	           ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
