--- a/c/index.html
+++ b/c/index.html
@@ -95,14 +95,12 @@
 	                          <p class="p-subheading">Research Interests</p>
 	                          <p>My current research interests are as follows:</p>
 	                          <ul>
-		                            <li>Formal verification for correct hardware design
-		                                and synthesis, based on modular proof. Take a look
-		                                at the <a href="http://plv.csail.mit.edu/kami"
+                                <li>Formal synthesis for protocols in message-passing systems.</li>
+		                            <li>Formal verification for correct hardware design and synthesis,
+		                                based on modular proof. Take a look at the <a href="http://plv.csail.mit.edu/kami"
 		                                          target="_blank">Kami</a> project page for
 		                                details</li>
-		                            <li>Formal proofs of realistic processors.</li>
-		                            <li>Formal specification of <a href="http://riscv.org"
-		                                                           target="_blank">RISC-V</a></li>
+		                            <li>Formal verification of realistic processors.</li>
 	                          </ul>
 	                      </div>
 
@@ -132,7 +130,8 @@
 	                          <ul>
 		                            <li><span class="paper">Kami: A Platform for
 		                                High-Level Parametric Hardware Specification and
-		                                its Modular Verification.</span> [to appear]<br />
+		                                its Modular Verification.</span>
+                                    [<a href="./docs/icfp17.pdf">pdf</a>]<br />
 		                                <span class="author">Joonwon Choi</span>,
 		                                Muralidaran Vijayaraghavan, Benjamin Sherman, Adam
 		                                Chlipala, and Arvind.<br />
